# scout-ai

./: .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  LICENSE  README.md  aws_guide.md  docker-compose.yml  pyproject.toml  requirements-lambda.txt  run.sh
app/: lambda_handler.py  main.py  streamlit_app.py
app/agents/: __init__.py  rag_pipeline.py
app/core/: __init__.py  config.py  ingestion.py  llm.py  reranker.py  reranker_llm.py  retrieval.py  vectorstore.py
app/evaluation/: __init__.py  eval_pipeline.py
app/guardrails/: __init__.py  safety.py
data/general/: company_info.md
data/hr/: hr_policies.md
data/marketing/: marketing_strategy_2024.md
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatPage.jsx  LoginPage.jsx
scripts/: init_vectorstore.py
tests/: test_core.py
