[project]
name = "finsolve-ai-assistant"
version = "1.0.0"
description = "Production-Grade RAG Chatbot with RBAC, Agentic AI, and AWS Deployment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web Framework
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    
    # LangChain Core
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    
    # LangChain Integrations
    "langchain-groq>=0.2.0",
    "langchain-chroma>=0.1.0",
    "langchain-huggingface>=0.1.0",
    
    # Vector Store
    "chromadb>=0.5.0",
    
    # Embeddings & Reranking
    "sentence-transformers>=3.0.0",
    
    # Hybrid Search (BM25)
    "rank-bm25>=0.2.2",
    
    # Data Processing
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Document Loaders
    "unstructured>=0.15.0",
    
    # Evaluation
    "ragas>=0.2.0",
    "datasets>=2.0.0",
    
    # Monitoring (LangSmith)
    "langsmith>=0.1.0",
    
    # Frontend
    "streamlit>=1.35.0",
    "requests>=2.31.0",
    
    # AWS (optional - for deployment)
    "boto3>=1.34.0",
    "mangum>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
